--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "npm run build:live",
+    "start": "pnpm run build:live",
     "build": "tsc -p .",
     "build:live": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\" src/index.ts",
+    "build:live:for": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\"",
     "test": "NODE_OPTIONS=--experimental-vm-modules npx jest",
     "test:watch": "pnpm run test --watch"
   },
