add big.js and dummy

--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "node": "18.13.0"
   },
   "dependencies": {
+    "@types/big.js": "^6.1.6",
+    "big.js": "^6.2.1",
     "rxjs": "^7.8.1"
   }
 }
