--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
   "dependencies": {
     "@types/big.js": "^6.1.6",
     "big.js": "^6.2.1",
-    "rxjs": "^7.8.1"
+    "reflect-metadata": "^0.2.1",
+    "rxjs": "^7.8.1",
+    "sqlite3": "^5.1.7",
+    "typeorm": "^0.3.20"
   }
 }
