--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "scripts": {
     "start": "pnpm run build:live",
     "ts-node": "ts-node",
+    "typeorm": "cd src/typeorm; npx typeorm-ts-node-esm",
+    "typeorm:run:index": "cd src/typeorm; npx ts-node src/index.ts",
+    "typeorm:migration:run": "cd src/typeorm; npx typeorm-ts-node-esm migration:run -d src/data-source.ts",
+    "typeorm:migration:generate_file": "cd src/typeorm; npx typeorm-ts-node-esm migration:generate -d src/data-source.ts -p ",
     "build": "tsc -p .",
     "build:live": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\" src/index.ts",
     "build:live:for": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\"",
