--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "typeorm:migration:run": "cd src/typeorm; npx typeorm-ts-node-esm migration:run -d src/data-source.ts",
     "typeorm:migration:generate_file": "cd src/typeorm; npx typeorm-ts-node-esm migration:generate -d src/data-source.ts -p ",
     "build": "tsc -p .",
-    "build:live": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\" src/index.ts",
-    "build:live:for": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\"",
+    "run:watch": "nodemon --watch 'src/**/*.ts' --exec \"ts-node\"",
     "test": "NODE_OPTIONS=--experimental-vm-modules npx jest",
     "test:watch": "pnpm run test --watch"
   },
